@@ -41,6 +41,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
+@SuppressWarnings({"PMD.VariableDeclarationUsageDistance"})
 public class EventBasedBatchIndexerTest extends BatchIndexTest {
 
     private EventBasedBatchIndexer indexer;
@@ -68,7 +69,7 @@ public class EventBasedBatchIndexerTest extends BatchIndexTest {
     @ValueSource(ints = {1, 2, 5, 10, 100})
     public void shouldReturnsAllIdsForPublishedResourcesThatFailedToBeIndexed(int numberOfFilesPerEvent)
         throws JsonProcessingException {
-        var logger = LogUtils.getTestingAppenderForRootLogger();
+        final var logger = LogUtils.getTestingAppenderForRootLogger();
         indexer = new EventBasedBatchIndexer(s3Client, failingOpenSearchClient(), eventBridgeClient,
                                              numberOfFilesPerEvent);
         var filesFailingToBeIndexed = randomFilesInSingleEvent(s3Driver, numberOfFilesPerEvent);
@@ -183,7 +184,7 @@ public class EventBasedBatchIndexerTest extends BatchIndexTest {
         return filesFailingToBeIndexed
             .stream()
             .map(UriWrapper::getLastPathElement)
-            .collect(Collectors.toList())
+            .toList()
             .toArray(String[]::new);
     }
 
